# ExternalSort

./: CMakeLists.txt  README.md  conanfile.txt
source/: CMakeLists.txt  main.cpp
source/common/: convert.hpp  math.hpp  type.hpp
source/container/: core.hpp
source/io/: core.hpp
source/sort/: inplace.cpp  inplace.hpp  kmerge.hpp  merge.cpp
source/sort/detail/: kmerger.cpp  kmerger.hpp
